src/objects/CodeInfo__c.object
<CustomObject>
    <description>Data object to store details about various sections of ApexClass objects</description>
    <fields>
        <fullName>ApexClassId__c</fullName>
        <description>The id of the ApexClass record that this ApexDoc describes</description>
        <externalId>true</externalId>
        <inlineHelpText>The id of the ApexClass record that this ApexDoc describes</inlineHelpText>
        <label>ApexClass ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <description>The name of the Apex Class or Interface that this record belongs to.</description>
        <externalId>true</externalId>
        <inlineHelpText>The name of the Apex Class or Interface that this record belongs to.</inlineHelpText>
        <label>File Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelType__c</fullName>
        <description>The type of data record this is.  It can be CLASS, METHOD, PROPERTY.</description>
        <inlineHelpText>The type of data record this is.  It can be CLASS, METHOD, PROPERTY.</inlineHelpText>
        <label>Model Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Code Info</label>
    <nameField>
        <displayFormat>CIN-{000000000}</displayFormat>
        <label>Code Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Code Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>